# smart-album-cleaner

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  app.py  poster.html  poster_technical_qna.txt  pyproject.toml  report.html  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: main.py  requirements.txt
docs/: MODEL_CARD.md
docs/superpowers/plans/: 2026-07-13-security-hardening.md
docs/superpowers/specs/: 2026-07-13-security-hardening-design.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: portfolio-evidence.spec.js
frontend/src/: App.vue  api.js  styles.css
frontend/src/components/: ResultsView.vue  ScanProgress.vue  Sidebar.vue  TrashView.vue  WelcomePage.vue
reports/: classification_report.txt  top_errors.txt
scripts/: download_models.py
src/: evaluate.py  extract_frames.py  face_detector.py  predict_face.py  prepare_dataset.py  train_mobilenet.py
tests/: test_backend_security.py  test_checkpoint_security.py  test_face_detector.py  test_model_download.py  test_portfolio_contract.py  test_predict_face.py  test_prepare_dataset.py
