[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-album-cleaner"
version = "0.2.0"
description = "AI 表情相簿管家 — 用 MobileNetV3 協助標記需要人工檢視的照片"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Smart Album Cleaner Contributors" }]
keywords = [
    "computer-vision", "deep-learning", "face-detection",
    "photo-management", "mobilenet", "fastapi", "vue",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2,<3.0",
    "torchvision>=0.17,<1.0",
    "mediapipe>=0.10.35,<0.11",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "httpx>=0.27,<1.0",
]

[project.scripts]
album-prepare = "src.prepare_dataset:main"
album-train = "src.train_mobilenet:main"
album-evaluate = "src.evaluate:main"
album-extract-frames = "src.extract_frames:main"

[project.urls]
Homepage = "https://github.com/Hunter20041004/smart-album-cleaner"
Repository = "https://github.com/Hunter20041004/smart-album-cleaner"
Issues = "https://github.com/Hunter20041004/smart-album-cleaner/issues"

# ── 程式碼風格 ──────────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = ["E501"]  # 中文字串容易超長,line length 不嚴格

# ── 測試 ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
